src/objects/Chatter_Feedback_Workday_int__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Hashtags__c</fullName>
        <label>Hashtags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WS_URL__c</fullName>
        <label>WS_URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Workday_User_Name__c</fullName>
        <label>Workday User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workday_password__c</fullName>
        <label>Workday password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chatter Feedback to Workday Integration</label>
</CustomObject>